--- a/Weather/res/Main.storyboard
+++ b/Weather/res/Main.storyboard
@@ -6,9 +6,16 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="WireOne.ttf">
+            <string>WireOne</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Weather-->
         <scene sceneID="tne-QT-ifu">
@@ -18,49 +25,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="JJY-sx-RAk">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-29°C" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EoG-yK-M6x">
-                                <rect key="frame" x="32" y="150.5" width="311" height="95.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="80"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="16" y="522" width="343" height="129"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="129" id="gjk-rS-xnR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="WireOne" family="Wire One" pointSize="160"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1012 hPa" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kf4-Ry-LnQ">
-                                <rect key="frame" x="32" y="261.5" width="311" height="38.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="16" y="475" width="343" height="39"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QYv-A1-hFz">
-                                <rect key="frame" x="32" y="96" width="311" height="51"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <state key="normal" title="Świdnica"/>
+                                <rect key="frame" x="16" y="416" width="343" height="51"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                <state key="normal" title="Świdnica">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="onCityNameClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FeP-Yq-vZU"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FVg-zi-Mcn">
-                                <rect key="frame" x="16" y="96" width="58" height="58"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_sunny" translatesAutoresizingMaskIntoConstraints="NO" id="FVg-zi-Mcn">
+                                <rect key="frame" x="87" y="150" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="FVg-zi-Mcn" secondAttribute="height" multiplier="200:200" id="gfG-TX-CTy"/>
+                                </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.30960164674255608" green="0.25315609803621542" blue="0.54626031091370564" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="JJY-sx-RAk" secondAttribute="bottom" id="AbE-77-iii"/>
-                            <constraint firstItem="EoG-yK-M6x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="EUc-Qe-yam"/>
-                            <constraint firstItem="JJY-sx-RAk" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ez4-8M-hxx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kf4-Ry-LnQ" secondAttribute="trailing" constant="32" id="F0x-z5-mYv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EoG-yK-M6x" secondAttribute="trailing" constant="32" id="Jdh-eR-vTk"/>
-                            <constraint firstItem="QYv-A1-hFz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="c3S-5K-yUM"/>
-                            <constraint firstItem="kf4-Ry-LnQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="dsI-qt-vab"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JJY-sx-RAk" secondAttribute="trailing" id="eas-64-rnY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QYv-A1-hFz" secondAttribute="trailing" constant="32" id="esn-RS-f9d"/>
-                            <constraint firstItem="JJY-sx-RAk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oP6-aO-A4j"/>
-                            <constraint firstItem="kf4-Ry-LnQ" firstAttribute="top" secondItem="EoG-yK-M6x" secondAttribute="bottom" constant="16" id="sbb-xk-dhD"/>
-                            <constraint firstItem="EoG-yK-M6x" firstAttribute="top" secondItem="QYv-A1-hFz" secondAttribute="bottom" constant="3.5" id="u47-ef-RdZ"/>
-                            <constraint firstItem="QYv-A1-hFz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="yMN-Yn-Ikd"/>
+                            <constraint firstItem="kf4-Ry-LnQ" firstAttribute="top" secondItem="QYv-A1-hFz" secondAttribute="bottom" constant="8" id="5VI-en-wua"/>
+                            <constraint firstItem="QYv-A1-hFz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="9Mh-ys-0zK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kf4-Ry-LnQ" secondAttribute="trailing" constant="16" id="G3p-A3-65s"/>
+                            <constraint firstItem="FVg-zi-Mcn" firstAttribute="centerX" secondItem="QYv-A1-hFz" secondAttribute="centerX" id="R34-fm-bZE"/>
+                            <constraint firstItem="FVg-zi-Mcn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.75" id="Rrq-4j-d5p"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EoG-yK-M6x" secondAttribute="trailing" constant="16" id="ToU-IJ-z19"/>
+                            <constraint firstItem="EoG-yK-M6x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Zsz-Uw-Bkv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QYv-A1-hFz" secondAttribute="trailing" constant="16" id="ehC-Vx-BDn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EoG-yK-M6x" secondAttribute="bottom" constant="16" id="phi-h6-bla"/>
+                            <constraint firstItem="EoG-yK-M6x" firstAttribute="top" secondItem="kf4-Ry-LnQ" secondAttribute="bottom" constant="8" id="t7m-kh-u4k"/>
+                            <constraint firstItem="kf4-Ry-LnQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="yxk-0F-ATY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -135,6 +144,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bg.jpeg" width="518" height="852"/>
+        <image name="ic_sunny" width="200" height="200"/>
     </resources>
 </document>
